$Id: History,v 1.80 2001-06-06 09:18:45 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

June 06, 2001 G.Cosmo (global-V03-01-01)
- G4DataVector: added constructor with argument for initialise values in
  collection.

May 30, 2001 G.Cosmo (global-V03-01-00)
- Defined 'str_size' as G4std::string::size_type and replaced usage of 'size_t'
  in G4String and G4SubString. Fixes problem report #40.

April 05, 2001 G.Cosmo (global-V03-00-11)
- Added patch to management/GNUmakefile for allowing compilation of G4UnitsTable.cc
  on SUN-CC5 (CC 5.2 Patch 109508-02), removing optimisation.

April 03, 2001 G.Cosmo (global-V03-00-10)
- Fixed minor bug in constructor of G4PhysicsLinearVector, G4PhysicsLnVector
  and G4PhysicsLogVector (H.Kurasige).

April 02, 2001 G.Cosmo (global-V03-00-09)
- G4UnitsTable.cc: resolved ambiguity of old/new style iostream for
  formatting in G4UnitsTable::operator<<.
- Fix for compilation on WIN32-VC: added typedef to base collection G4PhysCollection
  in G4PhysicsTable.
 
March 09, 2001 G.Cosmo (global-V03-00-08)
- Tyde up comments.
- Added patch to G4PhysicsTable::Store/Retrieve methods for non-ISO setup
  where 'binary' streams are not implemented. Binary mode is allowed only