@@ -1,4 +1,4 @@
-$Id: History,v 1.80 2001-06-06 09:18:45 gcosmo Exp $
+$Id: History,v 1.81 2001-06-15 12:57:01 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+June 15, 2001 G.Cosmo (global-V03-01-02)
+- globals.hh: removed definition of cbrt() to allow ANSI compilation on
+  Linux-g++ architecture with new compiler gcc-2.95-2.
 
 June 06, 2001 G.Cosmo (global-V03-01-01)
 - G4DataVector: added constructor with argument for initialise values in
